Validation du modèle et scores

--- a/tsne_kmeans.ipynb
+++ b/tsne_kmeans.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEeC/khEJpaL2nFiHu0kUQ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMIWyxwBqPXSFmGNsYq0z4t"
     },
     "kernelspec": {
       "name": "python3",
@@ -4125,16 +4124,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/nouhaz01/projet_final/blob/tsne_kmeans/tsne_kmeans.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!python --version"
@@ -4915,28 +4904,27 @@
     {
       "cell_type": "code",
       "source": [
-        "tsne = TSNE(n_components=3)\n",
-        "embedded_data = tsne.fit_transform(embeddings\n"
+        "def tsne_dim_red(mat, p):\n",
+        "  tsne = TSNE(n_components=3)\n",
+        "  embedded_data = tsne.fit_transform(embeddings)\n",
+        "  return embedded_data"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        },
-        "id": "jzU9NE0DxjlC",
-        "outputId": "1dd25c46-01b9-440f-829c-c7a48aea2e6e"
+        "id": "jzU9NE0DxjlC"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-a2ef9653c45c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    embedded_data = tsne.fit_transform(embeddings\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-          ]
-        }
-      ]
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedded_data = tsne_dim_red(embeddings, 3)"
+      ],
+      "metadata": {
+        "id": "rDfxG2gaZucN"
+      },
+      "execution_count": 27,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5056,6 +5044,131 @@
           },
           "metadata": {},
           "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Validation du modèle sur plusieurs échantillons"
+      ],
+      "metadata": {
+        "id": "u38wjE2SbtvK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
+        "all_indices = np.arange(len(train_data.data))\n",
+        "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')\n",
+        "l_nmi = []\n",
+        "l_ari = []\n",
+        "\n",
+        "for i in range(4):\n",
+        "\n",
+        "  np.random.shuffle(all_indices)\n",
+        "\n",
+        "  selected_indices = all_indices[:2000]\n",
+        "\n",
+        "  corpus_train = [train_data.data[i] for i in selected_indices]\n",
+        "  labels_train = [train_data.target[i] for i in selected_indices]\n",
+        "\n",
+        "  train = pd.DataFrame({'Document': corpus_train, 'Category': labels_train})\n",
+        "\n",
+        "  embeddings = model.encode(corpus_train)\n",
+        "\n",
+        "  red_emd = tsne_dim_red(embeddings, 3)\n",
+        "\n",
+        "  pred = clust(red_emd, 20)\n",
+        "  nmi_score, ari_score = score(pred, labels_train)\n",
+        "  l_nmi.append(nmi_score)\n",
+        "  l_ari.append(ari_score)\n",
+        "\n",
+        "  mean_nmi = np.mean(l_nmi)\n",
+        "  mean_ari = np.mean(l_ari)\n",
+        "  std_nmi = np.std(l_nmi)\n",
+        "  std_ari = np.std(l_ari)\n",
+        "\n",
+        "print(f'\\n\\n Pour {i+1} échantillonq de données voici la moyenne de chaque métrique et l\\'ecart type: \\n NMI: {mean_nmi:.2f} (+/- {std_nmi:.2f}) \\n ARI: {mean_ari:.2f} (+/- {std_ari:.2f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Uw1cthaY3Ur",
+        "outputId": "04f795e9-9ce7-4b86-b7c4-b279c3459299"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NMI: 0.44\n",
+            "ARI: 0.26\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NMI: 0.44\n",
+            "ARI: 0.28\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NMI: 0.42\n",
+            "ARI: 0.25\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NMI: 0.44\n",
+            "ARI: 0.28\n",
+            "\n",
+            "\n",
+            " Pour 4 echantillon de donnees voici la moyenne de chaque metrique et l ecart type: \n",
+            " NMI: 0.44 (+/- 0.01) \n",
+            " ARI: 0.27 (+/- 0.01\n"
+          ]
         }
       ]
     }
